# ch347-rs

./: Cargo.toml  LICENSE  README.md  build.rs
examples/: enum_devices.rs
lib/Mips/: CH347SPILIB.h
src/: lib.rs
src/ch347lib/: ch347dll.rs  ch347lib.rs  mod.rs
src/spi_flash/: mod.rs  model.rs  spi_drive.rs  spi_flash.rs
src/spi_flash/model/: eon_silicon.rs  gigadevice.rs  macronix.rs  mod.rs  winbond.rs
src/windows/: basetsd.rs  mod.rs
