[package]
name = "ch347_rs"
description = "ch347 for rust"
license = "MIT"
version = "0.2.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ch347tool"
path = "src/bin/ch347tool/main.rs"
doc = false

[lib]
test = true
doctest = true
doc = true

[dependencies]
clap = { version = "3.2", features = ["derive"] }
cli-table = "0.4.7"
console = "0.15"
hex = "0.4.3"
humantime = "2.1.0"
indicatif = "0.17.1"
libc = "0.2"
serde ={ version= "1.0", features = ["derive"] }
serde_json = "1.0"
shadow-rs = "0.16.3"

[build-dependencies]
shadow-rs = "0.16.3"
